# fundamentals

./: .gitignore  AGENTS.md  ISA.md  README.md  pyproject.toml
.aii/: config.yaml
chapters/: AGENTS.md  README.md
chapters/chapter_01/: 01_box_scenario.py  02_three_perspectives.py  03_bayes_intuition.py  04_inverse_problem.py  05_belief_from_stream.py  AGENTS.md  README.md  interactive_inverse_problem.py
chapters/chapter_02/: AGENTS.md  README.md  animation_gradient_descent.py  animation_sequential.py  example_2_10_gradient_descent.py  example_2_1_linear_deterministic.py  example_2_2_linear_probabilistic.py  example_2_3_precision.py  example_2_4_nonlinear_deterministic.py  example_2_5_nonlinear_probabilistic.py  example_2_6_imperfect_model.py  example_2_7_multiple_samples.py  example_2_8_mle_analytic.py  example_2_9_map_analytic.py  interactive_explorer.py  interactive_gradient_descent.py  visualize_generative_model.py
chapters/chapter_03/: AGENTS.md  README.md  animation_bimodal_emergence.py  animation_blr_predictive_band.py  animation_blr_tightening.py  animation_em_convergence.py  animation_em_steps.py  animation_lgs_online.py  animation_precision_sweep.py  animation_sufficient_statistics.py  example_3_1_linear_regression_mle.py  example_3_2_linear_regression_gd.py  example_3_3_multiple_regression.py  example_3_4_multivariate_gaussian.py  example_3_5_bayesian_linear_regression.py  example_3_6_lgs_food_localization.py  example_3_7_factor_analysis_em.py  interactive_bayesian_regression.py  interactive_lgs_localization.py  visualize_calibration.py  visualize_coverage.py  visualize_posterior_predictive.py
chapters/chapter_04/: AGENTS.md  README.md  animation_vfe_descent.py  example_4_1_coordinate_search.py  example_4_2_surprisal.py  example_4_3_vfe_forms.py  example_4_6_free_form_cavi.py  example_4_7_fixed_form.py  interactive_vfe_explorer.py  visualize_kl_loss.py  visualize_model_comparison.py  visualize_vfe_intuition.py
chapters/chapter_05/: AGENTS.md  README.md  animation_hierarchical.py  animation_recognition_descent.py  example_5_1_prediction_errors.py  example_5_2_precision.py  example_5_3_multivariate.py  example_5_4_recognition_dynamics.py  example_5_6_parameterized.py  example_5_7_hierarchical.py  interactive_predictive_coding.py
chapters/chapter_06/: AGENTS.md  README.md  example_6_1_generalized_filter.py  example_6_2_multivariate_filter.py  example_6_6_generalized_coordinates.py  example_6_7_multivariate_generalized_coordinates.py  (+1 more)
demo/: AGENTS.md  README.md
docs/: AGENTS.md  README.md  architecture.md  cookbook.md  learn_by_hand.md  notation.md  reading_order.md  uv.md  web.md
extras/: AGENTS.md  README.md
output/: AGENTS.md  README.md
scripts/: AGENTS.md  README.md  export_notebooks.py  run_all_figures.py  validate_book_topic_coverage.py  validate_notebook_exports.py  validate_orchestrator_contracts.py  validate_orchestrator_provenance.py  validate_raw_data_exports.py  validate_rendered_figures.py
src/: README.md
tests/: AGENTS.md  README.md  test_book_topic_coverage.py  test_demo_workflows.py  test_documentation_contracts.py  test_method_documentation_contracts.py  test_orchestrator_provenance.py  test_orchestrator_workflows.py  test_raw_data_exports.py  test_render_validator.py  test_run_all_figures.py
(+501 files in other folders)
